added grid reuseable component

--- a/index.html
+++ b/index.html
@@ -19,6 +19,14 @@
     <title>Portfolio</title>
   </head>
   <body>
-    <section class="nav-section"></section>
+    <section class="nav-section grid">
+        <div>
+            <img src="./images/image_geometry_1.png" alt="">
+        </div>
+        <span >
+            <i class="fa fa-bars fa-2xl" aria-hidden="true"></i>
+        </span>
+
+    </section>
   </body>
 </html>
