--- a/index.html
+++ b/index.html
@@ -19,13 +19,52 @@
     <title>Portfolio</title>
   </head>
   <body>
-    <section class="nav-section grid">
-        <div>
-            <img src="./images/image_geometry_1.png" alt="">
+    <main>
+      <section class="nav-section grid grid--2-cols">
+        <div class="nav-section-img">
+          <img src="./images/image_geometry_1.png" alt="" />
         </div>
-        <span >
-            <i class="fa fa-bars fa-2xl" aria-hidden="true"></i>
+        <span class="nav-hamburger">
+          <i class="fa fa-bars fa-4x" aria-hidden="true"></i>
         </span>
+      </section>
+
+      <section class="header-description">
+        <p class="header-description-name">Arnold Oghiator</p>
+        <p class="header-description-text">
+          Hello! I am a software developer! I can help you build a product,
+          feature or website. Taka a look of my works. If you like what you see
+          and have a project you need coded, don’t hesitate and contact me.
+        </p>
+        <button class="btn btn-header">
+            <a href="">Start collaboration</a>
+        </button>
+      </section>
+    </main>
+    <section class="">
+        <div class="box-image">
+
+        </div>
+    </section>
+    <section class="project-section">
+        <p class="project-section-title">Projects</p>
+
+        <div class="container-project">
+            <div>
+                <img src="" alt="">
+            </div>
+            <div class="project-description-container">
+                <p class="project-name">Project name goes here</p>
+                <div class="project-features">
+                    <button class="btn btn-feature">HTML/CSS</button>
+                    <button class="btn btn-feature">Ruby on Rails</button>
+                    <button class="btn btn-feature">JavaScript</button>
+                </div>
+            </div>
+
+
+        </div>
+
 
     </section>
   </body>
