project section completed

--- a/index.html
+++ b/index.html
@@ -37,35 +37,130 @@
           and have a project you need coded, don’t hesitate and contact me.
         </p>
         <button class="btn btn-header">
-            <a href="">Start collaboration</a>
+          <a href="">Start collaboration</a>
         </button>
       </section>
     </main>
     <section class="">
-        <div class="box-image">
-
-        </div>
+      <div class="box-image"></div>
     </section>
     <section class="project-section">
-        <p class="project-section-title">Projects</p>
+      <p class="project-section-title">Projects</p>
 
-        <div class="container-project">
-            <div>
-                <img src="" alt="">
+      <div class="project-description-container grid">
+        <div class="project-card">
+          <div class="project-img">
+            <img src="./images/Rectangle 21.png" alt="" />
+          </div>
+          <div class="project-description">
+            <div class="project-description">
+              <p class="project-name">Project name goes here</p>
+              <div class="project-features">
+                <button class="btn btn-feature">HTML/CSS</button>
+                <button class="btn btn-feature">Ruby on Rails</button>
+                <button class="btn btn-feature">JavaScript</button>
+              </div>
+              <a href="">See this Project &rarr;</a>
             </div>
-            <div class="project-description-container">
-                <p class="project-name">Project name goes here</p>
-                <div class="project-features">
-                    <button class="btn btn-feature">HTML/CSS</button>
-                    <button class="btn btn-feature">Ruby on Rails</button>
-                    <button class="btn btn-feature">JavaScript</button>
-                </div>
-            </div>
-
-
+          </div>
         </div>
-
-
+        <div class="project-card">
+          <div class="project-img">
+            <img src="./images/Rectangle 22.png" alt="" />
+          </div>
+          <div class="project-description">
+            <div class="project-description">
+              <p class="project-name">Project name goes here</p>
+              <div class="project-features">
+                <button class="btn btn-feature">HTML/CSS</button>
+                <button class="btn btn-feature">Ruby on Rails</button>
+                <button class="btn btn-feature">JavaScript</button>
+              </div>
+              <a href="">See this Project &rarr;</a>
+            </div>
+          </div>
+        </div>
+        <div class="project-card">
+          <div class="project-img">
+            <img src="./images/Rectangle 23.png" alt="" />
+          </div>
+          <div class="project-description">
+            <div class="project-description">
+              <p class="project-name">Project name goes here</p>
+              <div class="project-features">
+                <button class="btn btn-feature">HTML/CSS</button>
+                <button class="btn btn-feature">Ruby on Rails</button>
+                <button class="btn btn-feature">JavaScript</button>
+              </div>
+              <a href="">See this Project &rarr;</a>
+            </div>
+          </div>
+        </div>
+        <div class="project-card">
+          <div class="project-img">
+            <img src="./images/Rectangle 21.png" alt="" />
+          </div>
+          <div class="project-description">
+            <div class="project-description">
+              <p class="project-name">Project name goes here</p>
+              <div class="project-features">
+                <button class="btn btn-feature">HTML/CSS</button>
+                <button class="btn btn-feature">Ruby on Rails</button>
+                <button class="btn btn-feature">JavaScript</button>
+              </div>
+              <a href="">See this Project &rarr;</a>
+            </div>
+          </div>
+        </div>
+        <div class="project-card">
+          <div class="project-img">
+            <img src="./images/Rectangle 21.png" alt="" />
+          </div>
+          <div class="project-description">
+            <div class="project-description">
+              <p class="project-name">Project name goes here</p>
+              <div class="project-features">
+                <button class="btn btn-feature">HTML/CSS</button>
+                <button class="btn btn-feature">Ruby on Rails</button>
+                <button class="btn btn-feature">JavaScript</button>
+              </div>
+              <a href="">See this Project &rarr;</a>
+            </div>
+          </div>
+        </div>
+        <div class="project-card">
+          <div class="project-img">
+            <img src="./images/Rectangle 21.png" alt="" />
+          </div>
+          <div class="project-description">
+            <div class="project-description">
+              <p class="project-name">Project name goes here</p>
+              <div class="project-features">
+                <button class="btn btn-feature">HTML/CSS</button>
+                <button class="btn btn-feature">Ruby on Rails</button>
+                <button class="btn btn-feature">JavaScript</button>
+              </div>
+              <a href="">See this Project &rarr;</a>
+            </div>
+          </div>
+        </div>
+        <div class="project-card">
+          <div class="project-img">
+            <img src="./images/Rectangle 21.png" alt="" />
+          </div>
+          <div class="project-description">
+            <div class="project-description">
+              <p class="project-name">Project name goes here</p>
+              <div class="project-features">
+                <button class="btn btn-feature">HTML/CSS</button>
+                <button class="btn btn-feature">Ruby on Rails</button>
+                <button class="btn btn-feature">JavaScript</button>
+              </div>
+              <a href="">See this Project &rarr;</a>
+            </div>
+          </div>
+        </div>
+      </div>
     </section>
   </body>
 </html>
