--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         </div>
         <div class="project-card">
           <div class="project-img">
-            <img src="./images/Rectangle 21.png" alt="" />
+            <img src="./images/Rectangle 24.png" alt="" />
           </div>
           <div class="project-description">
             <div class="project-description">
@@ -114,39 +114,7 @@
         </div>
         <div class="project-card">
           <div class="project-img">
-            <img src="./images/Rectangle 21.png" alt="" />
-          </div>
-          <div class="project-description">
-            <div class="project-description">
-              <p class="project-name">Project name goes here</p>
-              <div class="project-features">
-                <button class="btn btn-feature">HTML/CSS</button>
-                <button class="btn btn-feature">Ruby on Rails</button>
-                <button class="btn btn-feature">JavaScript</button>
-              </div>
-              <a href="">See this Project &rarr;</a>
-            </div>
-          </div>
-        </div>
-        <div class="project-card">
-          <div class="project-img">
-            <img src="./images/Rectangle 21.png" alt="" />
-          </div>
-          <div class="project-description">
-            <div class="project-description">
-              <p class="project-name">Project name goes here</p>
-              <div class="project-features">
-                <button class="btn btn-feature">HTML/CSS</button>
-                <button class="btn btn-feature">Ruby on Rails</button>
-                <button class="btn btn-feature">JavaScript</button>
-              </div>
-              <a href="">See this Project &rarr;</a>
-            </div>
-          </div>
-        </div>
-        <div class="project-card">
-          <div class="project-img">
-            <img src="./images/Rectangle 21.png" alt="" />
+            <img src="./images/Rectangle 25.png" alt="" />
           </div>
           <div class="project-description">
             <div class="project-description">
@@ -161,6 +129,69 @@
           </div>
         </div>
       </div>
+    </section>
+    <section class="about-section">
+      <p class="about-section-title">About</p>
+      <p class="about-text">
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
+        veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ea
+        eiusmod
+      </p>
+      <div class="about-section-cv">
+        <a href="">Get my CV</a>
+        <span><i class="fa fa-calendar-arrow-down"></i></span>
+      </div>
+      <div class="about-framework">
+        <div class="framwork-card card-one">
+          <p class="framework-name">Languages</p>
+          <ul class="list-items">
+            <li>JavaScript (ES5/ES6)</li>
+            <li>Ruby</li>
+            <li>HTML</li>
+            <li>CSS</li>
+          </ul>
+          <span>
+            <img src="./images/#.png" alt="">
+          </span>
+        </div>
+        <div class="framwork-card card-two">
+          <p class="framework-name">Frameworks</p>
+          <ul class="list-items">
+            <li>JavaScript (ES5/ES6)</li>
+            <li>Ruby</li>
+            <li>HTML</li>
+            <li>CSS</li>
+          </ul>
+          <span>
+            <img src="./images/#.png" alt="">
+          </span>
+        </div>
+        <div class="framwork-card card-three">
+          <p class="framework-name">Skills</p>
+          <ul class="list-items">
+            <li>JavaScript (ES5/ES6)</li>
+            <span><i class="fas fa-sharp fa-solid fa-circle-small"></i></span>
+            <li>Ruby</li>
+            <li>HTML</li>
+            <li>CSS</li>
+          </ul>
+          <span>
+            <img src="./images/#.png" alt="">
+          </span>
+        </div>
+      </div>
+    </section>
+    <section class="get-started-section">
+        <div class="nav-section-img">
+            <img src="./images/image_geometry_1.png" alt="" />
+          </div>
+
+          <div class="get-started-info">
+
+          </div>
+
+
     </section>
   </body>
 </html>
