project section icons added

--- a/index.html
+++ b/index.html
@@ -156,6 +156,7 @@
             <ion-icon class="cv-icon" name="download-outline"></ion-icon>
         </div>
         <div class="about-framework margin-xmd-t">
+            <div class="main">
             <div class="framwork-card card-one">
                 <p class="framework-name">Languages</p>
                 <ul class="list-items margin-sm-t ">
@@ -168,53 +169,67 @@
                     <li class="list-item">
                         <div class="framework-icon"></div><span>HTML</span>
                     </li>
-                    <li class="list-item">
+                    <li class="list-item last">
                         <div class="framework-icon"></div><span>CSS</span>
                     </li>
                 </ul>
-                <span>
-                    <img src="./images/#.png" alt="" />
-                </span>
             </div>
+            
+            <span class="framework-footer-img">
+                <img src="./images/frame1.png" alt="image of frame-work symbol" />
+            </span>
+
+            </div>
+            <div class="main">
             <div class="framwork-card card-two">
                 <p class="framework-name">Frameworks</p>
                 <ul class="list-items margin-sm-t">
                     <li class="list-item">
-                        <div class="framework-icon"></div></span> JavaScript (ES5/ES6)
+                        <div class="framework-icon"></div><span>Bootstrap</span>
                     </li>
                     <li class="list-item">
-                        <div class="framework-icon"></div><span>Ruby</span>
+                        <div class="framework-icon"></div><span> Ruby on rails</span>
                     </li>
                     <li class="list-item">
-                        <div class="framework-icon"></div><span>HTML</span>
+                        <div class="framework-icon"></div><span>RSpec</span>
                     </li>
                     <li class="list-item">
-                        <div class="framework-icon"></div><span>CSS</span>
+                        <div class="framework-icon"></div><span>Capibara</span>
+                    </li>
+                    <li class="list-item last">
+                        <div class="framework-icon"></div><span>Selenium</span>
                     </li>
                 </ul>
-                <span>
-                    <img src="./images/#.png" alt="" />
+                <span class="framework-footer-img">
+                    <img src="./images/ic_framework.png" alt="image of frame-work symbol" />
                 </span>
             </div>
+            </div>
+            <div class="main">
             <div class="framwork-card card-three">
                 <p class="framework-name">Skills</p>
                 <ul class="list-items margin-sm-t">
                     <li class="list-item">
-                        <div class="framework-icon"></div></span> JavaScript (ES5/ES6)
+                        <div class="framework-icon"></div><span>Codekit</span> 
                     </li>
                     <li class="list-item">
-                        <div class="framework-icon"></div><span>Ruby</span>
+                        <div class="framework-icon"></div><span>Codepen</span>
                     </li>
                     <li class="list-item">
-                        <div class="framework-icon"></div><span>HTML</span>
+                        <div class="framework-icon"></div><span>GitHub</span>
                     </li>
                     <li class="list-item">
-                        <div class="framework-icon"></div><span>CSS</span>
+                        <div class="framework-icon"></div><span>GitLAb</span>
+                    </li>
+                    <li class="list-item last">
+                        <div class="framework-icon"></div><span>Terminal</span>
                     </li>
                 </ul>
-                <span>
-                    <img src="./images/#.png" alt="" />
+                
+                <span class="framework-footer-img">
+                    <img src="./images/ic_skills.png" alt="image of frame-work symbol" />
                 </span>
+            </div>
             </div>
         </div>
     </section>
