changes made to the toolbar and header section

--- a/index.html
+++ b/index.html
@@ -18,17 +18,17 @@
 
 <body>
     <main>
-        <section class="nav-section grid grid--2-cols">
+        <header class="nav-section grid grid--2-cols">
             <div class="nav-section-img">
                 <img src="./images/image_geometry_1.png" alt="" />
             </div>
-            <span class="nav-hamburger">
+            <nav class="nav-hamburger">
                 <i class="fa fa-bars fa-2x" aria-hidden="true"></i>
-            </span>
-        </section>
+            </nav>
+        </header>
 
         <section class="header-description margin-md">
-            <p class="header-description-name">Arnold Oshos Oghiator </p>
+            <h1 class="header-description-name">Arnold Oshos Oghiator </h1>
             <p class="header-description-text margin-sm">
                 Hello! I am a software developer! I can help you build a product,
                 feature or website. Taka a look of my works. If you like what you see
