--- a/index.html
+++ b/index.html
@@ -43,21 +43,21 @@
         <div class="box-image"></div>
     </section>
     <section class="project-section  margin-md-sm">
-        <p class="project-section-title margin-md-sm-b padding-sm">Projects</p>
+        <h3 class="project-section-title margin-md-sm-b padding-sm">Projects</h3>
 
         <div class="project-description-container grid">
-            <div class="project-card">
+            <div >
                 <div class="project-img">
                     <img src="./images/Rectangle 21.png" alt="" />
                 </div>
                 <div class="project-description">
                     <div class="project-description">
                         <p class="project-name ">Project name goes here</p>
-                        <div class="project-features margin-xsm margin-sm-b ">
-                            <button class="btn btn-feature">HTML/CSS</button>
-                            <button class="btn btn-feature">Ruby on Rails</button>
-                            <button class="btn btn-feature">JavaScript</button>
-                        </div>
+                        <ul class="project-features margin-xsm margin-sm-b ">
+                            <li class="btn btn-feature">HTML/CSS</li>
+                            <li class="btn btn-feature">Ruby on Rails</li>
+                            <li class="btn btn-feature">JavaScript</li>
+                        </ul>
                         <div class="view-project">
                             <a href="">See this Project</a> <span><ion-icon class="icon"
                                     name="arrow-forward-outline"></ion-icon></span>
@@ -65,18 +65,18 @@
                     </div>
                 </div>
             </div>
-            <div class="project-card">
+            <div>
                 <div class="project-img">
                     <img src="./images/Rectangle 22.png" alt="" />
                 </div>
                 <div class="project-description">
                     <div class="project-description">
                         <p class="project-name ">Project name goes here</p>
-                        <div class="project-features margin-xsm margin-sm-b ">
-                            <button class="btn btn-feature">HTML/CSS</button>
-                            <button class="btn btn-feature">Ruby on Rails</button>
-                            <button class="btn btn-feature">JavaScript</button>
-                        </div>
+                        <ul class="project-features margin-xsm margin-sm-b ">
+                            <li class="btn btn-feature">HTML/CSS</li>
+                            <li class="btn btn-feature">Ruby on Rails</li>
+                            <li class="btn btn-feature">JavaScript</li>
+                        </ul>
                         <div class="view-project">
                             <a href="">See this Project</a> <span><ion-icon class="icon"
                                     name="arrow-forward-outline"></ion-icon></span>
@@ -84,18 +84,18 @@
                     </div>
                 </div>
             </div>
-            <div class="project-card">
+            <div>
                 <div class="project-img">
                     <img src="./images/Rectangle 23.png" alt="" />
                 </div>
                 <div class="project-description">
                     <div class="project-description">
                         <p class="project-name ">Project name goes here</p>
-                        <div class="project-features margin-xsm margin-sm-b ">
-                            <button class="btn btn-feature">HTML/CSS</button>
-                            <button class="btn btn-feature">Ruby on Rails</button>
-                            <button class="btn btn-feature">JavaScript</button>
-                        </div>
+                        <ul class="project-features margin-xsm margin-sm-b ">
+                            <li class="btn btn-feature">HTML/CSS</li>
+                            <li class="btn btn-feature">Ruby on Rails</li>
+                            <li class="btn btn-feature">JavaScript</li>
+                        </ul>
                         <div class="view-project">
                             <a href="">See this Project</a> <span><ion-icon class="icon"
                                     name="arrow-forward-outline"></ion-icon></span>
@@ -103,18 +103,18 @@
                     </div>
                 </div>
             </div>
-            <div class="project-card">
+            <div>
                 <div class="project-img">
                     <img src="./images/Rectangle 24.png" alt="" />
                 </div>
                 <div class="project-description">
                     <div class="project-description">
                         <p class="project-name ">Project name goes here</p>
-                        <div class="project-features margin-xsm margin-sm-b ">
-                            <button class="btn btn-feature">HTML/CSS</button>
-                            <button class="btn btn-feature">Ruby on Rails</button>
-                            <button class="btn btn-feature">JavaScript</button>
-                        </div>
+                        <ul class="project-features margin-xsm margin-sm-b ">
+                            <li class="btn btn-feature">HTML/CSS</li>
+                            <li class="btn btn-feature">Ruby on Rails</li>
+                            <li class="btn btn-feature">JavaScript</li>
+                        </ul>
                         <div class="view-project">
                             <a href="">See this Project</a> <span><ion-icon class="icon"
                                     name="arrow-forward-outline"></ion-icon></span>
@@ -122,18 +122,18 @@
                     </div>
                 </div>
             </div>
-            <div class="project-card">
+            <div>
                 <div class="project-img">
                     <img src="./images/Rectangle 25.png" alt="" />
                 </div>
                 <div class="project-description">
                     <div class="project-description">
                         <p class="project-name ">Project name goes here</p>
-                        <div class="project-features margin-xsm margin-sm-b ">
-                            <button class="btn btn-feature">HTML/CSS</button>
-                            <button class="btn btn-feature">Ruby on Rails</button>
-                            <button class="btn btn-feature">JavaScript</button>
-                        </div>
+                        <ul class="project-features margin-xsm margin-sm-b ">
+                            <li class="btn btn-feature">HTML/CSS</li>
+                            <li class="btn btn-feature">Ruby on Rails</li>
+                            <li class="btn btn-feature">JavaScript</li>
+                        </ul>
                         <div class="view-project">
                             <a href="">See this Project</a> <span><ion-icon class="icon"
                                     name="arrow-forward-outline"></ion-icon></span>
@@ -144,7 +144,7 @@
         </div>
     </section>
     <section class="about-section margin-lg">
-        <p class="about-section-title margin-sm-b">About</p>
+        <h3 class="about-section-title margin-sm-b">About</h3>
         <p class="about-text margin-md-sm-b ">
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
             tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
