--- a/index.html
+++ b/index.html
@@ -46,18 +46,18 @@
         <p class="project-section-title margin-md-sm-b padding-sm">Projects</p>
 
         <div class="project-description-container grid">
-            <div class="project-card">
+            <div>
                 <div class="project-img">
                     <img src="./images/Rectangle 21.png" alt="" />
                 </div>
                 <div class="project-description">
                     <div class="project-description">
                         <p class="project-name ">Project name goes here</p>
-                        <div class="project-features margin-xsm margin-sm-b ">
-                            <button class="btn btn-feature">HTML/CSS</button>
-                            <button class="btn btn-feature">Ruby on Rails</button>
-                            <button class="btn btn-feature">JavaScript</button>
-                        </div>
+                        <ul class="project-features margin-xsm margin-sm-b ">
+                            <li class="btn btn-feature">HTML/CSS</li>
+                            <li class="btn btn-feature">Ruby on Rails</li>
+                            <li class="btn btn-feature">JavaScript</li>
+                        </ul>
                         <div class="view-project">
                             <a href="">See this Project</a> <span><ion-icon class="icon"
                                     name="arrow-forward-outline"></ion-icon></span>
@@ -65,18 +65,18 @@
                     </div>
                 </div>
             </div>
-            <div class="project-card">
+            <div>
                 <div class="project-img">
                     <img src="./images/Rectangle 22.png" alt="" />
                 </div>
                 <div class="project-description">
                     <div class="project-description">
                         <p class="project-name ">Project name goes here</p>
-                        <div class="project-features margin-xsm margin-sm-b ">
-                            <button class="btn btn-feature">HTML/CSS</button>
-                            <button class="btn btn-feature">Ruby on Rails</button>
-                            <button class="btn btn-feature">JavaScript</button>
-                        </div>
+                        <ul class="project-features margin-xsm margin-sm-b ">
+                        <li class="btn btn-feature">HTML/CSS</li>
+                        <li class="btn btn-feature">Ruby on Rails</li>
+                        <li class="btn btn-feature">JavaScript</li>
+                    </ul>
                         <div class="view-project">
                             <a href="">See this Project</a> <span><ion-icon class="icon"
                                     name="arrow-forward-outline"></ion-icon></span>
@@ -84,18 +84,18 @@
                     </div>
                 </div>
             </div>
-            <div class="project-card">
+            <div>
                 <div class="project-img">
                     <img src="./images/Rectangle 23.png" alt="" />
                 </div>
                 <div class="project-description">
                     <div class="project-description">
                         <p class="project-name ">Project name goes here</p>
-                        <div class="project-features margin-xsm margin-sm-b ">
-                            <button class="btn btn-feature">HTML/CSS</button>
-                            <button class="btn btn-feature">Ruby on Rails</button>
-                            <button class="btn btn-feature">JavaScript</button>
-                        </div>
+                        <ul class="project-features margin-xsm margin-sm-b ">
+                            <li class="btn btn-feature">HTML/CSS</li>
+                            <li class="btn btn-feature">Ruby on Rails</li>
+                            <li class="btn btn-feature">JavaScript</li>
+                        </ul>
                         <div class="view-project">
                             <a href="">See this Project</a> <span><ion-icon class="icon"
                                     name="arrow-forward-outline"></ion-icon></span>
@@ -103,18 +103,18 @@
                     </div>
                 </div>
             </div>
-            <div class="project-card">
+            <div>
                 <div class="project-img">
                     <img src="./images/Rectangle 24.png" alt="" />
                 </div>
                 <div class="project-description">
                     <div class="project-description">
                         <p class="project-name ">Project name goes here</p>
-                        <div class="project-features margin-xsm margin-sm-b ">
-                            <button class="btn btn-feature">HTML/CSS</button>
-                            <button class="btn btn-feature">Ruby on Rails</button>
-                            <button class="btn btn-feature">JavaScript</button>
-                        </div>
+                        <ul class="project-features margin-xsm margin-sm-b ">
+                            <li class="btn btn-feature">HTML/CSS</li>
+                            <li class="btn btn-feature">Ruby on Rails</li>
+                            <li class="btn btn-feature">JavaScript</li>
+                        </ul>
                         <div class="view-project">
                             <a href="">See this Project</a> <span><ion-icon class="icon"
                                     name="arrow-forward-outline"></ion-icon></span>
@@ -122,18 +122,18 @@
                     </div>
                 </div>
             </div>
-            <div class="project-card">
+            <div>
                 <div class="project-img">
                     <img src="./images/Rectangle 25.png" alt="" />
                 </div>
                 <div class="project-description">
                     <div class="project-description">
                         <p class="project-name ">Project name goes here</p>
-                        <div class="project-features margin-xsm margin-sm-b ">
-                            <button class="btn btn-feature">HTML/CSS</button>
-                            <button class="btn btn-feature">Ruby on Rails</button>
-                            <button class="btn btn-feature">JavaScript</button>
-                        </div>
+                        <ul class="project-features margin-xsm margin-sm-b ">
+                            <li class="btn btn-feature">HTML/CSS</li>
+                            <li class="btn btn-feature">Ruby on Rails</li>
+                            <li class="btn btn-feature">JavaScript</li>
+                        </ul>
                         <div class="view-project">
                             <a href="">See this Project</a> <span><ion-icon class="icon"
                                     name="arrow-forward-outline"></ion-icon></span>
