--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
             veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ea
             eiusmod
         </p>
-        <div class="about-section-cv">
+        <div class="about-section-cv btn-header">
             <a href="">Get my CV</a>
             <ion-icon class="cv-icon" name="download-outline"></ion-icon>
         </div>
