button on form state refector -hover -visited

--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
                 feature or website. Taka a look of my works. If you like what you see
                 and have a project you need coded, don’t hesitate and contact me.
             </p>
-            <button class="btn btn-header margin-xmd">
-                <a href="">Start collaboration</a>
+            <button class="form-btn margin-xmd ">
+                Start collaboration
             </button>
         </section>
     </main>
@@ -67,7 +67,7 @@
             </div>
             <div>
                 <div class="project-img">
-                    <img src="./images/Rectangle 22.png" alt="" />
+                    <img src="./images/Rectangle 22.png" alt="project image" />
                 </div>
                 <div class="project-description">
                     <div class="project-description">
@@ -258,7 +258,7 @@
             <div class="form-control-area margin-xsm-t">
                 <textarea type="text" id="" rows="10" placeholder="Enter your message here..." maxlength="500" required></textarea>
             </div>
-            <button type="submit" class="btn btn-header margin-sm ">
+            <button type="submit" class="form-btn">
                 Start collaboration
             </button>
         </form>
