email field refactor

--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
             </div>
             <div class="form-control margin-xsm-t">
                 <label for="name">Your Email</label>
-                <input type="email" name="email" required maxlength="30">
+                <input type="email" name="email" required >
             </div>
             <div class="form-control-area margin-xsm-t">
                 <textarea type="text" id="" rows="10" placeholder="Enter your message here..." maxlength="500" required></textarea>
