flex added to form tag

--- a/index.html
+++ b/index.html
@@ -247,15 +247,15 @@
             </h3>
         </div>
         <form action="https://formspree.io/f/mbjelojv" method="POST" class="get-started-form margin-md-sm">
-            <div class="form-control">
+            <div class="form-control-input">
                 <label for="name">Your name</label>
                 <input type="text" name="name" required maxlength="30">
             </div>
-            <div class="form-control margin-xsm-t">
+            <div class="form-control-input margin-xsm-t">
                 <label for="name">Your Email</label>
                 <input type="email" name="email" required >
             </div>
-            <div class="form-control-area margin-xsm-t">
+            <div class="form-control-textarea margin-xsm-t">
                 <textarea type="text" id="" rows="10" placeholder="Enter your message here..." maxlength="500" required></textarea>
             </div>
             <button type="submit" class="form-btn">
