flex added to the the form tag

--- a/index.html
+++ b/index.html
@@ -251,11 +251,11 @@
                 <label for="name">Your name</label>
                 <input type="text" name="name" required maxlength="30">
             </div>
-            <div class="form-control-input margin-xsm-t">
+            <div class="form-control-input">
                 <label for="name">Your Email</label>
                 <input type="email" name="email" required >
             </div>
-            <div class="form-control-textarea margin-xsm-t">
+            <div class="form-control-textarea">
                 <textarea type="text" id="" rows="10" placeholder="Enter your message here..." maxlength="500" required></textarea>
             </div>
             <button type="submit" class="form-btn">
