added the toolbar

--- a/index.html
+++ b/index.html
@@ -18,14 +18,25 @@
 
 <body>
     <main>
-        <header class="nav-section grid grid--2-cols">
-            <div class="nav-section-img">
-                <img src="./images/image_geometry_1.png" alt="" />
-            </div>
-            <nav class="nav-hamburger">
-                <i class="fa fa-bars fa-2x" aria-hidden="true"></i>
-            </nav>
-        </header>
+        <section>
+            <header class="nav-section grid mobile-nav  grid--2-cols">
+               
+                <div class="nav-section-img">
+                    <img src="./images/image_geometry_1.png" alt="" />
+                </div>
+                <nav class="nav-hamburger">
+                    <i class="fa fa-bars fa-2x" aria-hidden="true"></i>
+                </nav>
+            </header>
+            <nav class="nav-desktop">
+                <ul class="nav-desktop-items">
+                    <li>Hello</li>
+                    <li>Portfolio</li>
+                    <li>About</li>
+                    <li>Contact</li>
+                </ul>
+               </nav>
+        </section>
 
         <section class="header-description margin-md">
             <h1 class="header-description-name">Arnold Oshos Oghiator </h1>
