landing page view adjusted to desktop

--- a/index.html
+++ b/index.html
@@ -35,10 +35,12 @@
                     <li>About</li>
                     <li>Contact</li>
                 </ul>
+    
                </nav>
         </section>
 
-        <section class="header-description margin-md">
+       <section>
+        <div class="header-description margin-md">
             <h1 class="header-description-name">Arnold Oshos Oghiator </h1>
             <p class="header-description-text margin-sm">
                 Hello! I am a software developer! I can help you build a product,
@@ -48,7 +50,28 @@
             <button class="form-btn margin-xmd ">
                 Start collaboration
             </button>
-        </section>
+        </div>
+        <div class="header-description-desktop">
+            <div class="hi">
+                <h1 class="header-description-name">Arnold Oshos Oghiator </h1>
+            <p class="header-description-text margin-sm">
+                Hello! I am a software developer! I can help you build a product,
+                feature or website. Taka a look of my works. If you like what you see
+                and have a project you need coded, don’t hesitate and contact me.
+            </p>
+            <button class="form-btn margin-xmd ">
+                Start collaboration
+            </button>
+            </div>
+            <div class="top-image-desktop">
+                <img src="./images/desktop.png" alt="">
+                
+
+            </div>
+
+
+        </div>
+       </section>
     </main>
     <section class="margin-md-sm">
         <div class="box-image"></div>
