project section destop view

--- a/index.html
+++ b/index.html
@@ -52,8 +52,9 @@
             </button>
         </div>
         <div class="header-description-desktop">
-            <div class="hi">
-                <h1 class="header-description-name">Arnold Oshos Oghiator </h1>
+           <div class="header-info-container">
+            <div class="header-info-card">
+                <h1 class="header-description-name">Arnold Oghiator </h1>
             <p class="header-description-text margin-sm">
                 Hello! I am a software developer! I can help you build a product,
                 feature or website. Taka a look of my works. If you like what you see
@@ -63,6 +64,12 @@
                 Start collaboration
             </button>
             </div>
+
+            <div class="inner-image">
+                <img src="./images/image_dots.png" alt="">
+            </div>
+           </div>
+
             <div class="top-image-desktop">
                 <img src="./images/desktop.png" alt="">
                 
