get started section added

--- a/index.html
+++ b/index.html
@@ -327,7 +327,14 @@
         <div class="nav-section-img">
             <img src="./images/image_geometry_1.png" alt="" />
         </div>
+        <div class="cta-img first-top">
+            <img src="./images/image-geometry_6.png" alt="" />
+        </div>
+        <div class="cta-img second-bottom">
+            <img src="./images/image-geometry_7.png" alt="" />
+        </div>
 
+       <div class="get-started-desktop">
         <div class="get-started-info">
             <p>Get started</p>
 
@@ -337,6 +344,7 @@
             </h3>
         </div>
         <form action="https://formspree.io/f/mbjelojv" method="POST" class="get-started-form margin-md-sm">
+           <div class="desktop-input">
             <div class="form-control-input">
                 <label for="name">Your name</label>
                 <input type="text" name="name" required maxlength="30">
@@ -345,6 +353,7 @@
                 <label for="name">Your Email</label>
                 <input type="email" name="email" required>
             </div>
+           </div>
             <div class="form-control-textarea">
                 <textarea type="text" id="" rows="10" placeholder="Enter your message here..." maxlength="500"
                     required></textarea>
@@ -353,6 +362,7 @@
                 Start collaboration
             </button>
         </form>
+       </div>
 
     </section>
     <footer class="footer-section margin-xl-t ">
