get started section refactor

--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@
 
             <h3 class="get-started-text margin-sm">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                eiusmod tempor incididunt ut labore et dolore magna.
+                eiusmod tempor incididunt ut labore et dolore magna. Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut, est!z
             </h3>
         </div>
         <form action="https://formspree.io/f/mbjelojv" method="POST" class="get-started-form margin-md-sm">
@@ -358,9 +358,11 @@
                 <textarea type="text" id="" rows="10" placeholder="Enter your message here..." maxlength="500"
                     required></textarea>
             </div>
-            <button type="submit" class="form-btn">
-                Start collaboration
-            </button>
+            <div class="get-started-btn">
+                <button type="submit" class="form-btn">
+                    Start collaboration
+                </button>
+            </div>
         </form>
        </div>
 
