get started section and footer destop view

--- a/index.html
+++ b/index.html
@@ -367,14 +367,14 @@
        </div>
 
     </section>
-    <footer class="footer-section margin-xl-t ">
+    <footer class="footer-section">
         <div class="footer-container">
 
             <aside>
                 <a href="" class="resume-link">Get my Resume</a>
                 <span><i class="fa-sharp fa-solid fa-arrow-up-right-from-square fa-2x resume-link-icon"></i></span>
             </aside>
-            <ul class="list-footer-container margin-md">
+            <ul class="list-footer-container">
                 <li class="list-footer">
                     <ion-icon class="footer-icon" name="logo-stackoverflow"></ion-icon>
                 </li>
